Bug 145688 - Images misplaced in table cells
Summary: Images misplaced in table cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2021-11-14 22:17 UTC by jaubert4
Modified: 2022-11-30 13:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
fichier TP micro onde pdf et odt (2.52 MB, application/pdf)
2021-11-14 22:17 UTC, jaubert4
Details
Version odt (13.08 MB, application/vnd.oasis.opendocument.text)
2021-11-14 22:20 UTC, jaubert4
Details
Version odt (deleted)
2021-11-14 22:23 UTC, jaubert4
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jaubert4 2021-11-14 22:17:14 UTC
Created attachment 176252 [details]
fichier TP micro onde pdf et odt

Bonsoir,

J'ai un problème concernant des fichiers réalisés sous une version LibreOffice antérieure 6.3.1.2
Actuellement quand je les ouvre avec ma version 7.2.0.4 sur mon nouveau PC
Il y a des fichiers dont le contenu est tout décalé...
Heureusement que j'ai toujours mon ancienne version sur un autre PC qui me l'ouvre correctement, je l'ai enregistré en PDF.

Je vous transmet le fichier en pdf ou tout est ok
et le fichier odt ou tout devient décalé.

Merci de votre aide.
Cordialement,
Jacques
Comment 1 jaubert4 2021-11-14 22:20:08 UTC
Created attachment 176253 [details]
Version odt
Comment 2 jaubert4 2021-11-14 22:23:33 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2022-11-22 11:58:34 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2022-11-22 12:09:00 UTC
Observed by looking at the images in the table on page 2

Bibisected with linux-64-6.4 to
https://git.libreoffice.org/core/commit/489eef894e7034873ad262f9dfca554022db1b09
tdf#124601 sw FollowTextFlow: fix vert pos of objects outside the current cell

Still repro with

Arch Linux 64-bit
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 70987cc656f0cded915be5aa148f265a257ec791
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 22 November 2022
Comment 5 Miklos Vajna 2022-11-30 07:13:08 UTC
https://gerrit.libreoffice.org/c/core/+/143472 / 1d9221ebc86f2696a65c12287ea19eea44d680cf fixed this, just I got the bug number wrong.
Comment 6 Commit Notification 2022-11-30 13:15:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/145b942359b7d2c14f162d9417873ae097ea3b7c

tdf#145688 sw: fix misplaced images in table cells

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.