sw/source/core/doc/notxtfrm.cxx
@@ -103,7 +103,7 @@ static void lcl_PaintReplacement( const SwRect &rRect, const OUString &rText,
         vcl::Font tmp;
         tmp.SetWeight( WEIGHT_BOLD );
         tmp.SetStyleName( OUString() );
-        tmp.SetFamilyName("Arial Unicode");
+        tmp.SetFamilyName("Noto Sans");
         tmp.SetFamily( FAMILY_SWISS );
         tmp.SetTransparent( true );
         return tmp;
